tests/NormalTests/paczka1/fuzzy1/65643464.err
Error in line 7: yjT2HhhD A819 58,3
Error in line 14: A537 A727 50,1
Error in line 20: Z6cVi¼34eQ S982 24,6
Error in line 25: Z6cViR34eQ S982 47,5
Error in line 26: Z6cViR34eQ A819 67,6
